src/sass/partials/todolist.scss
.container {
  background-color: #fff;
  width: 50%;
  margin: 0 auto;
  transform: translateY(4rem);
  padding: 1.2rem 2rem;
  border-radius: 8px;
  box-shadow: 0px 14px 14px #ccc;

  @media (max-width: 450px) {
   transform: none;
   width: 100vw;
   padding: 1rem;
   margin: 4rem auto;
   box-shadow: none;
  }
}

.mark-all {
  margin-top: 1rem;

  &__btn {
    all: unset;
    border-bottom: 2px solid transparent;
    font-size: .8rem;
    cursor: pointer;

    @media(max-width: 450px) {
      margin-top: .2rem;
      font-size: 1.2rem;
    }

    & > * {
      margin-right: .5rem;
    }

    &:active {
      transform: translateY(1px);
    }

    &--incomplete {
      color: #f77754;
      border-bottom: 2px solid transparent;
  
        &:hover {
          border-bottom: 2px solid #f77754;
        }
    }

    &--complete {

      color: #00bdaa;
      border-bottom: 2px solid transparent;
  
      &:hover {
        border-bottom: 2px solid #00bdaa;
      }

    }

  }

}

.todos {
  margin-top: 2rem;
  font-size: 1.5rem;
  margin-bottom: 2rem;

  @media (max-width: 450px) {
    margin-top: 4rem;
    margin-bottom: 4rem;
  }
}

.line-break {
  border-bottom: 1px solid #f2f2f2;
  margin: 1rem 0 1rem 0;

  @media (max-width: 450px) {
    padding: 0 1rem;
  }
}

.footer {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;

  @media (max-width: 450px) {
    flex-direction: column;
    align-items: center;
    width: 80%;
    font-size: 1.4rem;
  }

  &__btns {
    color: #777;
  }

  &__btn {
    all: unset;
    cursor: pointer;
    

    @media (max-width: 450px) {
      margin: 1rem;
      font-size: 1.5rem;
    }

    &:disabled {
      color: #e1e1e1;
    }
  }

  &__info {
    @media (max-width: 450px) {
      position: absolute;
      top: 0;
      left: 5px;
      font-size: 2rem;
      background: #f1f1f1;
      width: 100%;
      padding: 1rem;
      letter-spacing: 0.1rem;
    }
  }

}

span {
  font-weight: 600;
}

